Fix Windows build script locations

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -49,7 +49,7 @@ cygwin_task:
     - choco install -y --no-progress cygwin
     - c:\tools\cygwin\cygwinsetup -q -P binutils,gcc-core
   compile_script:
-    - c:\tools\cygwin\bin\bash --login "%CD%\scripts\build.sh"
+    - c:\tools\cygwin\bin\bash --login "%CD%\build.sh"
 msys_task:
   windows_container:
     image: cirrusci/windowsservercore:cmake
@@ -58,4 +58,4 @@ msys_task:
     - set PATH=c:\tools\msys64\bin;c:\tools\msys64\usr\bin;%PATH%
     - pacman --noconfirm -S gcc
   compile_script:
-    - c:\tools\msys64\usr\bin\bash --login "%CD%\scripts\build.sh"
+    - c:\tools\msys64\usr\bin\bash --login "%CD%\build.sh"
