--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,7 +37,7 @@ freebsd_task:
   freebsd_instance:
     image: freebsd-12-0-release-amd64
   setup_script:
-    - pkg update -y
+    - pkg update
     - pkg install -y git
   compile_script: CC=clang ./build.sh
 macos_task:
